fix(responsive-table): bottom shadow on mobile

--- a/responsive-table/style.css
+++ b/responsive-table/style.css
@@ -240,6 +240,7 @@
     grid-template-columns: 1fr;
     background: none;
     border: none;
+    box-shadow: none;
   }
 
   [responsive-table] [table-row] {
